wordpress/wordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: web
  - port: 9117
    protocol: TCP
    targetPort: 9117
    name: metrics
  selector:
    app: wordpress
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    app: wordpress
  name: wordpress
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wordpress
    spec:
      containers:
      - env:
        - name: WORDPRESS_DB_HOST
          value: db
        - name: WORDPRESS_DB_NAME
          value: exampledb
        - name: WORDPRESS_DB_PASSWORD
          value: examplepass
        - name: WORDPRESS_DB_USER
          value: exampleuser
        image: wordpress
        name: wordpress
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
        resources:
          limits:
            cpu: "0.2"
          requests:
            cpu: "0.1"
      - image: bonniernews/apache_exporter
        name: exporter
        ports:
        - containerPort: 9117
          name: metrics
      restartPolicy: Always
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim

# vim: ts=2 sts=2 sw=2 et
